<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OneUI App</string>
    <string name="app_subtitle">A Demo App Showcasing OneUI Design</string>
    <string name="settings_subtitle">Customize Your App</string>
    
    <string name="title_features">Main Features</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="swipe_up">Swipe up</string>
    
    <string name="feature1">Content is displayed and controlled easily</string>
    <string name="feature2">Simple and easy to use design</string>
    <string name="feature3">Consistent UI elements for better experience</string>
    <string name="feature4">Supports dark mode for viewing comfort</string>
    
    <string name="about_text">This is a demo app to showcase the OneUI design</string>
    
    <string name="drawer_home">Home</string>
    <string name="drawer_settings">Settings</string>
    
    <string name="settings_info">You can control app settings from here</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="settings_appearance">Appearance</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_system">System</string>
    <string name="settings_language_arabic">Arabic</string>
    <string name="settings_language_english">English</string>
    
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    
    <string name="settings_notifications_section">Notifications</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_placeholder">Notifications feature coming soon</string>

    <!-- Notifications Settings -->
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_description">Receive app notifications</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>

</resources>
